Fix gitignore file and entitlements file for widget extension

--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,48 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+# macOS
+.DS_Store
+# Xcode build artifacts & user settings
+build/
+DerivedData/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.xcuserstate
+*.xccheckout
+*.xcscmblueprint
 
-\f0\fs24 \cf0 # macOS\
-.DS_Store\
-\
-# Xcode build artifacts & user settings\
-build/\
-DerivedData/\
-*.pbxuser\
-!default.pbxuser\
-*.mode1v3\
-!default.mode1v3\
-*.mode2v3\
-!default.mode2v3\
-*.perspectivev3\
-!default.perspectivev3\
-xcuserdata/\
-*.xcuserstate\
-*.xccheckout\
-*.xcscmblueprint\
-\
-# Swift / Obj\uc0\u8209 C specifics\
-*.hmap\
-*.ipa\
-*.dSYM\
-*.dSYM.zip\
-\
-# SwiftUI Playgrounds (if used)\
-timeline.xctimeline\
-playground.xcworkspace\
-\
-# Swift Package Manager\
-.build/\
-!Package.resolved\
-\
-# Xcode workspace (if you commit it)\
-*.xcworkspace/contents.xcworkspacedata\
-**/xcshareddata/WorkspaceSettings.xcsettings\
-\
-# Fastlane artifacts (if used)\
-fastlane/report.xml\
-fastlane/Preview.html\
-fastlane/screenshots/\
-fastlane/test_output\
-\
-# Temporary/editor files\
-*.swp\
-*.swo\
-*.tmp\
-*.log\
-*.orig}
+# Swift / ObjC specifics
+*.hmap
+*.ipa
+*.dSYM
+*.dSYM.zip
+
+# SwiftUI Playgrounds (if used)
+timeline.xctimeline
+playground.xcworkspace
+
+# Swift Package Manager
+.build/
+!Package.resolved
+
+# Xcode workspace (if you commit it)
+*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
+
+# Fastlane artifacts (if used)
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/
+fastlane/test_output
+
+# Temporary editor files
+*.swp
+*.swo
+*.tmp
+*.log
+*.orig
